--- a/static/index.html
+++ b/static/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
+    <script src="app.js"></script>
     <title>PasteBin</title>
 </head>
 <body id="c1">
@@ -31,19 +32,19 @@
           </nav>
           <hr class="my">
         <div>
-            <h2 id="c1">Lets Create Your Paste</h2>
+            <h2 id="c1">Lets Create Your Paste ✍️</h2>
         <form action="">
             <div class="row">
                 <div class="col-12 col-sm-3">
                     <div class="form-group">
                         <label for="author"><span class="fa fa-user"></span> Paste author</label>
-                        <input type="text" id="c2" class="form-control" id="author" placeholder="Peter Parker">
+                        <input type="text"  class="form-control c2" id="author" placeholder="Peter Parker">
                     </div>
                 </div>
                 <div class="col-12 col-sm-3">
                     <div class="form-group">
                         <label for="title"><span class="fa fa-edit"></span> Paste Title</label>
-                        <input type="text" id="c2" class="form-control" id="title" placeholder="My Paste">
+                        <input type="text"  class="form-control c2" id="title" placeholder="My Paste">
                     </div>
                 </div>
                 <div class="col-12 col-sm-3">
@@ -54,7 +55,7 @@
             </div>
             <div class="form-group">
                 <label for="paste"><span class="fa fa-file"></span> Paste Your Paste</label>
-                <textarea class="form-control prettyprint" rows="15" id="paste" spellcheck="true"></textarea>
+                <textarea class="form-control prettyprint c2" rows="15" id="paste" spellcheck="true"></textarea>
             </div>
             <div class="form-group">
                 <div class="form-check">
@@ -65,7 +66,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <button type="button" id="get_url" class="btn btn-primary">Create Paste</button>
+                <button type="button" id="get_url" class="btn btn-primary" onclick="doit()">Create Paste</button>
             </div>
 
     </div>
