--- a/static/index.html
+++ b/static/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <script src="app.js"></script>
+    <link rel="shortcut icon" href="#" />
     <title>PasteBin</title>
 </head>
 <body id="c1">
