--- a/static/index.html
+++ b/static/index.html
@@ -24,7 +24,7 @@
                   <a class="nav-link" href="#" id="c1">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#" id="c1">Recents</a>
+                  <a class="nav-link" href="recents.html" id="c1">Recents</a>
                 </li>
               </ul>
               
