--- a/static/preview.html
+++ b/static/preview.html
@@ -16,11 +16,11 @@
     
     <script>
         var link=window.location.href;
+        link=link.substring(0,link.length-9);
         var url=new URL(link);
-        var id=url.searchParams.get('id');
         fetch("/find",{
         method:"POST",
-        body:JSON.stringify({id}),
+        body:JSON.stringify({url}),
         headers: {
             "Content-type": "application/json; charset=UTF-8",
           },
