--- a/static/recents.html
+++ b/static/recents.html
@@ -9,6 +9,8 @@
   src="https://code.jquery.com/jquery-3.6.0.min.js"
   integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
   crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.js"
+  integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
   <script src="recents.js"></script>
     <title>Recents</title>
 </head>
@@ -35,8 +37,8 @@
             </div>
             <span class="fa fa-sun fa-lg"></span>
           </nav>
-        <div class="docs">
-            
+        <div id="docs">
+
         </div>
     </div>
 </body>
