--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ShareBin</title>
+    <title>PasteBin</title>
 </head>
 <!--codemirror-->
 <script src="./codemirror/lib/codemirror.js"></script>
